make header align correctly

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,7 +2,7 @@
   padding-top: 5px;
 }
 
-.site-collapse-custom-panel {
+.collapse-custom-panel {
   background: black; 
   width: 140px;
   max-height: 275px;
